# auto-video-fixer

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml  issue-helper.yml  release.yml
docs/: API.md  DEVELOPER.md  IMPLEMENTATION.md  ROADMAP.md  USER_GUIDE.md
src/autovideofixer/: __init__.py  config.py  logger.py
src/autovideofixer/ai/: __init__.py  frame_processor.py  model_cache.py  torch_utils.py
src/autovideofixer/ai/wrappers/: __init__.py  interpolate.py  upscale.py
src/autovideofixer/cli/: __init__.py  cli.py
src/autovideofixer/core/: __init__.py  analysis.py  ffmpeg_utils.py  pipeline.py  presets.py  quality.py
src/autovideofixer/core/stages/: __init__.py  base.py  deblock.py  denoise_video.py  detect.py  encode.py  hdr.py  interpolate.py  normalize_audio.py  remux.py  speed.py  stabilize.py  upscale.py
src/autovideofixer/gui/: __init__.py  main_window.py
tests/: conftest.py  test_core.py
tests/integration/: test_integration.py
tests/unit/: test_ai_wrappers.py  test_analysis.py  test_cli.py  test_config.py  test_ffmpeg_utils.py  test_frame_processor.py  test_model_cache.py  test_pipeline.py  test_presets.py  test_quality.py  test_quality_improved.py  test_stages.py  test_torch_utils.py
