[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "auto-video-fixer"
version = "0.1.0"
description = "Automated video enhancement and processing suite"
readme = "README.md"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Auto Video Fixer Contributors"},
]
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "rich>=13.0",
    "opencv-python-headless>=4.8",
    "numpy>=1.24",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.6",
]
ai = [
    "torch>=2.0",
    "torchvision>=0.15",
]
all = [
    "auto-video-fixer[gui,ai]",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-qt>=4.2",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
avf = "autovideofixer.cli.cli:main"

[project.gui-scripts]
avf-gui = "autovideofixer.gui.main_window:run"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.hatch.build.targets.wheel]
packages = ["src/autovideofixer"]
